@@ -1,5 +1,12 @@
 2009-12-3  Miguel de Dios  <miguel.dedios@artica.es>
 
+	* godmode/agentes/module_manager_editor_common.php: clean source code.
+	* include/functions_reporting.php: fix the query to count bad modules for
+	SLA.
+	Fixes: 2908101
+
+2009-12-3  Miguel de Dios  <miguel.dedios@artica.es>
+
 	* godmode/reporting/map_builder.php: tiny fix the text for select all
 	modules in select box.
 	Fixes: 2897433
